[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "Homework for Qa_quru"
authors = ["Kseniia Trepykhalina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pytest = "^7.1.3"
selene = "2.0.0b14"

[tool.poetry.group.dev.dependencies]
pylint = "2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
